--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="separator" id="separator1">
             <div>
-                <span id="leftFromCompas">Часы работы: <b>10:00 - 00:00</b></span>
+                <span id="leftFromCompas">Часы работы: <b>10:00 - 21:00</b></span>
                 <img src="img/compas.png" alt="">
                 <span>Адрес: <b>Ереван, проспект Комитаса 23</b></span>
             </div>
@@ -109,15 +109,15 @@
                 <h2>БРОНЬ</h2>
                 <p id="leftP">Бронируя столик на романтический ужин или какое-либо торжество, вы всегда будете уверены в наличии свободных мест. И сделать это очень просто !</p>
                 <p><b>Забронировать столик можно по телефону:</b></p>
-                <span>+ 123 456 7890 </span>
+                <span>+374 41 04 1102</span>
             </div>
             <img src="img/decorVertical.png" alt="" id="deliveryDecoration">
             <div>
                 <img src="img/delivery.png" alt="">
                 <h2>ДОСТАВКА</h2>
                 <p id="rightP">С нашей доставкой вы забудете, что такое готовить !</p>
-                <a href="#" class="button">
-                    ПОДРОБНЕЙ
+                <a class="button">
+                    ДОСТАВКА ВРЕМЕННО НЕДОСТУПНА
                 </a>
             </div>
         </div>
@@ -126,7 +126,7 @@
             <h2>КОНТАКТЫ</h2>
             <span>Адрес: Ереван, проспект Комитаса 23</span>
             <span>Часы работы: <b>10:00 - 00:00</b></span>
-            <span>Маршрут от метро Барекамутюн до</br>ресторана - 15 минут</span>
+            <span>Маршрут от метро Барекамутюн до</br>ресторана - 15 минут пешком</span>
             <span><u><b><a href="https://maps.app.goo.gl/GXXcb2sU6sWL6PRq6" target="_blank">ПОКАЗАТЬ НА КАРТЕ</a></b></u></span>
             <div id="instagram">
                 <img src="img/instagram.png" alt="">
