--- a/menu.html
+++ b/menu.html
@@ -171,6 +171,20 @@
                     </div>
                 </div>
             </div>
+
+            <div class="main">
+                <img src="menuImg/salads/ЗАМКОВЫЙ.jpg">
+                <div class="info">
+                    <div id="spaceBetween">
+                        <p id="name"><b>ЗАМКОВЫЙ</b></p>
+                        <p id="weight">Вес: <b>200 гр </b></p>
+                    </div>
+                    <p id="text">Свежий шпинат, помидоры черри, кедровые орехи, руккола, оливковое масло первого отжима</p>
+                    <div>
+                        <p id="price"><b>1 970 դ</b></p>
+                    </div>
+                </div>
+            </div>
         </div>
         
         <div id="soup">
@@ -340,6 +354,19 @@
                     <div>
                         <p id="price"><b>440 դ</b></p>
                         <img id="icon" src="img/clover.png">
+                    </div>
+                </div>
+            </div>
+            <div class="main">
+                <img src="menuImg/breakfast/МАТСАЙКЕР ФЛАТ УИТЧ.JPG">
+                <div class="info">
+                    <div id="spaceBetween">
+                        <p id="name"><b>МАТСАЙКЕР <br>ФЛАТ УИТЧ</b></p>
+                        <p id="weight">Вес: <b>210 гр / 330 гр</b></p>
+                    </div>
+                    <p id="text">Авокадо, свежие томаты, сыр мягкий, жареные кабачки, специи на хрустящей багете (рис в большой порции)</p>
+                    <div>
+                        <p id="price"><b>2 330 դ / 3 000 դ</b></p>
                     </div>
                 </div>
             </div>
@@ -573,7 +600,7 @@
             <h2>КОНТАКТЫ</h2>
             <span>Адрес: Ереван, проспект Комитаса 23</span>
             <span>Часы работы: <b>10:00 - 00:00</b></span>
-            <span>Маршрут от метро Барекамутюн до</br>ресторана - 15 минут</span>
+            <span>Маршрут от метро Барекамутюн до</br>ресторана - 15 минут пешком</span>
             <span><u><b><a href="https://maps.app.goo.gl/GXXcb2sU6sWL6PRq6" target="_blank">ПОКАЗАТЬ НА КАРТЕ</a></b></u></span>
             <div id="instagram">
                 <img src="img/instagram.png" alt="">
