--- a/menu.html
+++ b/menu.html
@@ -165,7 +165,7 @@
                         <p id="name"><b>ИЧАБО</b></p>
                         <p id="weight">Вес: <b>180 гр </b></p>
                     </div>
-                    <p id="text">Авокадо, пекинская капуста, перепелиные яйца, масло оливковое extra virgin</p>
+                    <p id="text">Авокадо, пекинская капуста, перепелиные яйца, масло оливковое extra virgin, перепелиные яйца, специи</p>
                     <div>
                         <p id="price"><b>1 970 դ</b></p>
                     </div>
@@ -179,7 +179,7 @@
                         <p id="name"><b>ЗАМКОВЫЙ</b></p>
                         <p id="weight">Вес: <b>200 гр </b></p>
                     </div>
-                    <p id="text">Свежий шпинат, помидоры черри, кедровые орехи, руккола, оливковое масло первого отжима, перепелиные яйца, специи</p>
+                    <p id="text">Свежий шпинат, помидоры черри, кедровые орехи, руккола, оливковое масло первого отжима</p>
                     <div>
                         <p id="price"><b>1 990 դ</b></p>
                     </div>
