--- a/menu.html
+++ b/menu.html
@@ -91,7 +91,7 @@
                 <img src="menuImg/salads/ЕКАТЕРИНГОВСКИЙ.JPG">
                 <div class="info">
                     <div id="spaceBetween">
-                        <p id="name"><b>ЕКАТЕРИНГОВСКИЙ</b></p>
+                        <p id="name"><b>ЕКАТЕРИНГОФСКИЙ</b></p>
                         <p id="weight">Вес: <b>210 гр </b></p>
                     </div>
                     <p id="text">Сыроедческий слоёный салат а-ля «Шуба». Морские водоросли, авокадо, овощи, фирменный кешью-майонез, 
