--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
-    <title>Острова | Веганские Блюда и Доставка в Ереване</title>
-    <meta name="description" content="Острова — новый ресторан веганской кухни в Ереване. Мы предлагаем изысканные блюда, доставку и возможность бронирования. Погрузитесь в атмосферу уюта и вкуса!">
+    <title>Острова | Вегетерианский ресторан с доставкой в Ереване</title>
+    <meta name="description" content="Острова — новый ресторан вегетерианской кухни в Ереване. Мы предлагаем изысканные блюда, доставку и возможность бронирования. Погрузитесь в атмосферу уюта и вкуса!">
     <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
