--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             </div>
             <div>
                 <img src="img/mail.png" alt="">
-                <span>Islands.am@yahoo.com</span>
+                <span>islands.am@yahoo.com</span>
             </div>
         </div>
         <div class="separator" id="separator4">
