compressed images and fixed bugs

--- a/menu.html
+++ b/menu.html
@@ -113,7 +113,6 @@
                     <p id="text">Помидоры черри, лист салата, сыр фета, перепелиное яйцо, оливковое масло холодного отжима, оливки</p>
                     <div>
                         <p id="price"><b>2 580 դ</b></p>
-                        <img id="icon" src="img/sun.png">
                     </div>
                 </div>
             </div>
@@ -165,7 +164,7 @@
                         <p id="name"><b>ИЧАБО</b></p>
                         <p id="weight">Вес: <b>180 гр </b></p>
                     </div>
-                    <p id="text">Авокадо, пекинская капуста, перепелиные яйца, масло оливковое extra virgin, перепелиные яйца, специи</p>
+                    <p id="text">Авокадо, пекинская капуста, перепелиные яйца, масло оливковое extra virgin, специи</p>
                     <div>
                         <p id="price"><b>1 970 դ</b></p>
                     </div>
@@ -330,7 +329,7 @@
                 </div>
             </div>
             <div class="main">
-                <img src="menuImg/hot/РИС.png">
+                <img src="menuImg/hot/РИС.JPG">
                 <div class="info">
                     <div id="spaceBetween">
                         <p id="name"><b>РИС-БАСМАТИ <br>С ЧЁРНЫМ КУНЖУТОМ</b></p>
