--- a/menu.html
+++ b/menu.html
@@ -158,7 +158,7 @@
                 </div>
             </div>
             <div class="main">
-                <img src="menuImg/salads/ЗАМКОВЫЙ.jpg">
+                <img src="menuImg/salads/ИЧАБО.jpg">
                 <div class="info">
                     <div id="spaceBetween">
                         <p id="name"><b>ИЧАБО</b></p>
