--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     </div>
                     <div class="line"></div>
                     <div>
-                        <b>Блюдо дня  - 25%!!!</b>
-                        <h3>Изола-Белла</h3>
+                        <b>Новинка !!!</b>
+                        <h3>Пирожное Мадагаскар</h3>
                     </div>
                 </div>
             </div>
